# ros2-go2-sdk

./: .gitignore  .gitmodules  NATIVE-TOPICS.md  NATIVE-TOPICS.txt  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/unitree_api/share/unitree_api/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/unitree_api/share/unitree_api/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_unitree_api__rosidl_generator_pyExport-noconfig.cmake  export_unitree_api__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  unitree_apiConfig-version.cmake  unitree_apiConfig.cmake
install/unitree_api/share/unitree_api/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/unitree_api/share/unitree_api/msg/: Request.idl  Request.msg  RequestHeader.idl  RequestHeader.msg  RequestIdentity.idl  RequestIdentity.msg  RequestLease.idl  RequestLease.msg  RequestPolicy.idl  RequestPolicy.msg  Response.idl  Response.msg  ResponseHeader.idl  ResponseHeader.msg  ResponseStatus.idl  ResponseStatus.msg
install/unitree_api/share/unitree_api/rust/: Cargo.toml  build.rs
install/unitree_go/share/unitree_go/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/unitree_go/share/unitree_go/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_unitree_go__rosidl_generator_cExport.cmake  export_unitree_go__rosidl_generator_cppExport.cmake  export_unitree_go__rosidl_generator_pyExport-noconfig.cmake  export_unitree_go__rosidl_generator_pyExport.cmake  export_unitree_go__rosidl_typesupport_fastrtps_cExport.cmake  export_unitree_go__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  unitree_goConfig-version.cmake  (+3 more)
log/: latest_build
src/go2_bringup/: CMakeLists.txt  package.xml
src/go2_bringup/launch/: go2_bringup.launch.py  go2_mapping.launch.py  go2_navigation.launch.py  go2_remote.launch.py
src/go2_controller/: CMakeLists.txt  README.md  package.xml
src/go2_controller/config/: cyclonedds.xml  cyclonedds_jetson.xml  gstreamer.yaml  gstreamer_jetson.yaml  gstreamer_pc.yaml  twist_mux.yaml
src/go2_controller/include/go2_controller/: go2_cmd_vel_bridge.hpp  go2_driver_node.hpp  go2_gstreamer.hpp  go2_gstreamer_jetson.hpp  go2_joint_state.hpp  go2_odometry.hpp  go2_sport_client.hpp  go2_tf_broadcaster.hpp  go2_types.hpp
src/go2_controller/rviz/: mapping.rviz  navigation.rviz
src/go2_controller/scripts/: setup_cyclonedds.sh
src/go2_controller/src/: go2_cmd_vel_bridge.cpp  go2_driver_node.cpp  go2_gstreamer.cpp  go2_gstreamer_jetson.cpp  go2_gstreamer_jetson_main.cpp  go2_gstreamer_main.cpp  go2_joint_state.cpp  go2_odometry.cpp  go2_sport_client.cpp  go2_tf_broadcaster.cpp  main.cpp
src/go2_description/: CMakeLists.txt  package.xml
src/go2_description/launch/: display.launch.py
src/go2_description/rviz/: urdf.rviz
src/go2_description/urdf/: go2.urdf  go2.urdf.xacro
src/go2_navigation/: CMakeLists.txt  package.xml
src/go2_navigation/config/: nav2_params backup.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml  slam_params.yaml
src/go2_navigation/maps/: FullMap.pgm  FullMap.yaml  Lobby-1.pgm  Lobby-1.yaml  Studio.pgm  Studio.yaml  Studio_Pintu.pgm  Studio_Pintu.yaml  lobby.pgm  lobby.yaml  lobby_extend.pgm  lobby_extend.yaml  lobby_test.pgm  lobby_test.yaml  lobby_test_2.pgm  lobby_test_2.yaml  nav_lobby.pgm  nav_lobby.yaml  stair.pgm  stair.yaml  stair_keepout.pgm  stair_keepout.yaml  studio-1.pgm  studio-1.yaml
src/go2_navigation/mask/guidance/: guidance_mask.pgm  guidance_mask.yaml
src/go2_navigation/mask/keepout/: keepout_mask.pgm  keepout_mask.yaml
src/go2_navigation/mask/passable/: passable_mask.pgm  passable_mask.yaml
src/go2_navigation/mask/speed/: speed_mask.pgm  speed_mask.yaml
src/go2_sdk/: README.md  setup.sh
(+609 files in other folders)
