<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_controller</name>
  <version>0.1.0</version>
  <description>Bridge nodes for Unitree Go2 robot control via CycloneDDS</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>std_msgs</depend>
  <depend>libopencv-dev</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
